# UniAdmissionSystem

./: CMakeLists.txt
source/candidate/: candidate.cpp  candidate.h
source/major/: major.cpp  major.h
source/wxWidgets/: admissionApp.cpp  admissionApp.h  main.cpp  mainFrame.cpp  mainFrame.h
